@@ -2,7 +2,7 @@
  *
  * Nagios Main Header File
  * Written By: Ethan Galstad (nagios@nagios.org)
- * Last Modified: 05-22-2007
+ * Last Modified: 07-11-2007
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License version 2 as
@@ -45,7 +45,7 @@ extern "C" {
 
 #define MAX_USER_MACROS				256	/* maximum number of $USERx$ macros */
 
-#define MACRO_X_COUNT				116	/* size of macro_x[] array */
+#define MACRO_X_COUNT				118	/* size of macro_x[] array */
 
 #define MACRO_HOSTNAME				0
 #define MACRO_HOSTALIAS				1
@@ -163,6 +163,8 @@ extern "C" {
 #define MACRO_HOSTACKAUTHORALIAS                113
 #define MACRO_SERVICEACKAUTHORNAME              114
 #define MACRO_SERVICEACKAUTHORALIAS             115
+#define MACRO_MAXHOSTATTEMPTS			116
+#define MACRO_MAXSERVICEATTEMPTS		117
 
 
 
